manually added unit test cases